--- a/styles/addTaskPopUp.css
+++ b/styles/addTaskPopUp.css
@@ -162,16 +162,24 @@ textarea {
 
 .msg-task-added {
     display: none;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
     position: fixed;
-    bottom: 20px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     background-color: rgba(43, 169, 227, 1);
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
+    white-space: nowrap;
+}
+
+.msg-task-added p {
+    margin: 0;
 }
 
 @media screen and (max-width: 768px) {
